--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "illusion",
+  "name": "illusionjs",
   "version": "1.0.0",
   "description": "illusion for javascript class",
   "main": "dist/index.js",
@@ -12,22 +12,6 @@
   "scripts": {
     "start": "parcel --no-cache src/demo.html",
     "build": "parcel build src/index.ts --target node --bundle-node-modules"
-  },
-  "babel": {
-    "plugins": [
-      [
-        "@babel/plugin-transform-for-of",
-        {
-          "assumeArray": true
-        }
-      ],
-      [
-        "@babel/plugin-transform-runtime",
-        {
-          "regenerator": true
-        }
-      ]
-    ]
   },
   "repository": {
     "type": "git",
@@ -46,8 +30,6 @@
   },
   "homepage": "https://github.com/mytabworks/illusion#readme",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
     "parcel-bundler": "^1.12.4",
     "typescript": "^4.1.3"
   }
